Fix magnific.js arrow buttons on mobile

--- a/assets/scss/components/content/_entry-content.scss
+++ b/assets/scss/components/content/_entry-content.scss
@@ -117,6 +117,12 @@
         }
     }
 
+    p.empty {
+        padding: 0;
+        margin: 0;
+        line-height: 0;
+    }
+
     a[href*="http://"],
     a[href*="https://"],
     a[href*="www"] {
