--- a/assets/scss/partials/magnific/main.scss
+++ b/assets/scss/partials/magnific/main.scss
@@ -455,10 +455,6 @@ button {
 
 // Scale navigation arrows and reduce padding from sides
 @media all and (max-width: 900px) {
-	.mfp-arrow {
-		-webkit-transform: scale(0.75);
-		transform: scale(0.75);
-	}
 	.mfp-arrow-left {
 		-webkit-transform-origin: 0;
 		transform-origin: 0;
